多语言配置

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,6 +70,13 @@
                 android:id="@+id/loginButton"
                 android:inputType="number"
                 android:text="@string/login"/>
+
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/languageChoice"
+                android:inputType="number"
+                android:text="@string/changeLanguage"/>
         </RelativeLayout>
     </RelativeLayout>
 </LinearLayout>
