--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,100 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="horizontal">
-    <RelativeLayout
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-        <RelativeLayout
-            android:id="@+id/phoneRL"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/phone"
-                android:padding="8dp"
-                android:textSize="17sp"
-                android:textColor="#000"
-                android:id="@+id/phone"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-            <EditText
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/phoneContent"
-                android:background="@android:drawable/edit_text"
-                android:layout_alignParentTop="true"
-                android:inputType="phone"
-                android:layout_toRightOf="@id/phone" />
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/phoneContent"
-                android:text="@string/getCheckCode"
-                android:id="@+id/getCheckCodeButton"/>
-        </RelativeLayout>
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkCodeRL"
-            android:layout_below="@id/phoneRL">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/checkCode"
-                android:padding="8dp"
-                android:textColor="#000"
-                android:textSize="17sp"
-                android:id="@+id/checkCode"/>
-            <EditText
+            android:layout_height="fill_parent"
+            android:id="@+id/rlTop">
+            <RelativeLayout
+                android:id="@+id/phoneRL"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/checkCodeContent"
-                android:background="@android:drawable/edit_text"
-                android:layout_alignParentTop="true"
-                android:layout_toRightOf="@id/checkCode" />
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/checkCodeRL"
-            android:paddingLeft="8dp">
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/loginButton"
-                android:text="@string/login"/>
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="100dp"
+                android:layout_height="wrap_content">
 
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/languageChoice"
-                android:layout_below="@id/loginButton"
-                android:text="改变语言环境"/>
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/showHtmlButton"
-                android:layout_below="@id/languageChoice"
-                android:text="加载html5页面"/>
-            <WebView
-                android:layout_width="fill_parent"
-                android:id="@+id/webView"
-                android:layout_below="@id/showHtmlButton"
-                android:layout_height="100dp">
-            <!--<ListView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/webView"
-                android:entries="@array/arr">
-            </ListView>-->
+                <TextView
+                    android:id="@+id/phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:padding="8dp"
+                    android:text="@string/phone"
+                    android:textColor="#000"
+                    android:textSize="17sp" />
 
-            </WebView>
+                <EditText
+                    android:id="@+id/phoneContent"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@id/phone"
+                    android:background="@android:drawable/edit_text"
+                    android:inputType="phone" />
+
+                <Button
+                    android:id="@+id/getCheckCodeButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/phoneContent"
+                    android:text="@string/getCheckCode" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/checkCodeRL"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/phoneRL">
+
+                <TextView
+                    android:id="@+id/checkCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:text="@string/checkCode"
+                    android:textColor="#000"
+                    android:textSize="17sp" />
+
+                <EditText
+                    android:id="@+id/checkCodeContent"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@id/checkCode"
+                    android:background="@android:drawable/edit_text" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/checkCodeRL"
+                android:id="@+id/buttonRL"
+                android:paddingLeft="8dp">
+
+                <Button
+                    android:id="@+id/loginButton"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/login" />
+
+                <Button
+                    android:id="@+id/languageChoice"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/loginButton"
+                    android:text="改变语言环境" />
+
+                <Button
+                    android:id="@+id/showHtmlButton"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/languageChoice"
+                    android:text="@string/loadHtml5View" />
+                <Button
+                    android:id="@+id/loadingButton"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/showHtmlButton"
+                    android:text="@string/loadAnimation" />
+                <Button
+                    android:id="@+id/clearLoadingButton"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/loadingButton"
+                    android:text="@string/removeLoadAnimation" />
+                <!--<ListView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/webView"
+                    android:entries="@array/arr">
+                </ListView>-->
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_below="@id/buttonRL">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/loading"
+                    android:src="@drawable/loading"/>
+                <WebView
+                    android:id="@+id/webView"
+                    android:layout_below="@id/loading"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+                </WebView>
+            </RelativeLayout>
         </RelativeLayout>
-    </RelativeLayout>
-</LinearLayout>
+</ScrollView>
